hard-gists/8543933/run.log
=== Docker Run Log for 8543933 ===
Started at: Mi 29. Okt 17:50:43 CET 2025

[2025-10-29 17:50:43] START: Running container for 8543933
[2025-10-29 17:50:43] SUCCESS: Container c42160768976d1fce5f36eb220c10f92e7d8c736922d269a4aa20422a150cd7c started for 8543933
=== Container logs for 8543933 ===
  File "/snippet.py", line 33
    print 'Failed to retrieve header!'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8543933 ===
[2025-10-29 17:50:45] INFO: Container c42160768976d1fce5f36eb220c10f92e7d8c736922d269a4aa20422a150cd7c has stopped
